fixes color contrast

--- a/css/styles.css
+++ b/css/styles.css
@@ -544,7 +544,7 @@ td{
 
 
 .commercial-sub-header-center{
-  margin-top: 10em;
+  margin-top: 9em;
   padding-left: 25%;
   padding-right: 25%;
   text-align: center;
@@ -572,6 +572,7 @@ td{
 .quote-author-center{
   text-align: center;
   padding-left: 30%;
+  margin-top: -1em;
 }
 /*.headshot-bottom{
   background: url('http://i1027.photobucket.com/albums/y332/SteveCreswick/SC_headshot_zpsgxerlqa3.jpeg');
